--- a/front/styles/style.css
+++ b/front/styles/style.css
@@ -13,6 +13,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-x: hidden;
 }
 
 .layui-text a:not(.layui-btn):hover {
